# tennis_buddy

./: .gitignore  LICENSE  README.md  setup.py
assets/: README.md
configs/: README.md
docker/: Dockerfile  README.md  entrypoint.sh  start-vnc.sh  supervisord.conf
launch/: README.md
scripts/: setup.sh  start-gazebo.sh  start-ros2.sh
tennisbuddy/description/: CMakeLists.txt  README.md  package.xml
tennisbuddy/description/launch/: display_map.launch.py  display_mini.launch.py
tennisbuddy/description/maps/: court.sdf  map.config
tennisbuddy/description/urdf/: mini.urdf  miti_65.urdf
tennisbuddy/description/urdf/accessories/: imu.urdf  rover_dev_payload.urdf  rplidar_s2.urdf
tennisbuddy/hardware/: README.md
tennisbuddy/perception/: CMakeLists.txt  README.md  package.xml  setup.py
tennisbuddy/perception/launch/: accessories.launch.py  ball_spawner.launch.py  perception_gazebo_gt.launch.py  robot_localizer.launch.py  robot_localizer_outdoor.launch.py  slam_launch.py
tennisbuddy/perception/src/nodes/: ball_groundtruth.py  ball_spawner.py  mock_spawn_service.py
tennisbuddy/planning/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
tennisbuddy/planning/configs/: nav2_params.yaml  sources.yaml
tennisbuddy/planning/launch/: nav2_backend.py  navigation_launch.py  outdoor_navigation_launch.py  planning_nav2_goal.launch.py  planning_nav2_path.launch.py  planning_tennisbuddy.launch.py
tennisbuddy/planning/src/nodes/: nav2_goal_pusher.py  nav2_path_bridge.py  planner_node.py  traj_tracker.py
tennisbuddy/ros2_control/: CMakeLists.txt  package.xml
tennisbuddy/ros2_control/configs/: miti_65_config.yaml
tennisbuddy/ros2_control/include/: ros2_control.hpp
tennisbuddy/ros2_control/launch/: miti_65.launch.py  miti_65_teleop.launch.py  ps4_controller.launch.py  ps5_controller.launch.py  ros2_control.launch.py
tennisbuddy/ros2_control/maps/: court_map.pgm  court_map.yaml  court_map_v1.pgm  court_map_v1.yaml  court_mapv2.pgm  court_mapv2.yaml
tennisbuddy/ros2_control/src/: ros2_control.cpp
tennisbuddy/simulation/: README.md
tennisbuddy/simulation/gazebo/: CMakeLists.txt  package.xml
tennisbuddy/simulation/gazebo/launch/: mini_gazebo.launch.py  miti_65_gazebo.launch.py
tennisbuddy/simulation/gazebo/worlds/: court.sdf  courtv2.sdf  warehouse.sdf
