<?xml version="1.0"?>
<package format="3">
  <name>tennisbuddy_perception</name>
  <version>0.1.0</version>
  <description>Perception helpers</description>
  <maintainer email="hectorh@andrew.cmu.edu">Hector</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>ros_gz_interfaces</exec_depend>   <!-- SpawnEntity srv -->
  <exec_depend>ros_gz_bridge</exec_depend>
</package>