<?xml version="1.0"?>
<package format="3">
  <name>tennisbuddy_perception</name>
  <version>0.1.0</version>
  <description>Perception helpers</description>
  <maintainer email="hectorh@andrew.cmu.edu">Hector</maintainer>
  <license>Apache-2.0</license>

   <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
<!--  <buildtool_depend>ament_python</buildtool_depend>-->

  <!-- Python runtime -->
  <exec_depend>python3</exec_depend>
  <exec_depend>setuptools</exec_depend>
  <exec_depend>ament_index_python</exec_depend>


  <exec_depend>rclpy</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>ros_gz_interfaces</exec_depend>   <!-- SpawnEntity srv -->
  <exec_depend>ros_gz_bridge</exec_depend>

  <!-- Localization / Mapping used by our navigation_launch include -->
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <!-- Testing / linting (optional) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>